--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,6 @@ image:hover {
 
 a {
   color: inherit;
-  text-decoration: none;
 }
 
 .blocker {
@@ -63,13 +62,16 @@ a {
 
 
 .footer {
-  display: block;
+  display: flex;
+  flex-direction: column;
   padding-top: 20px;
   padding: 15px;
+  padding-bottom: 20px;
   width: 400px;
   flex: none;
   position: relative;
   font-size: 16px;
+  justify-content: space-between;
 
 }
 
@@ -109,6 +111,7 @@ a {
   justify-content: center;
   align-items: center;
   mix-blend-mode: darken;
+    cursor: pointer;
 }
 
 .btnControl {
@@ -121,23 +124,18 @@ a {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   transform: scale(1.5, 1.0);
-  transform-origin: left;
-  order: -1;
+  transform-origin: center;
+
 
 }
 
-.gradient:hover {
+
+
+.gradient:has(.btnControl:not(:checked)):hover {
   animation-name: example;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-duration: 5s !important;
-}
-
-.gradient:has(.btnControl:checked):hover {
-  animation-name: example;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-duration: 40s !important;
 }
 
 .gradient:has(.btnControl:checked):hover {
@@ -175,6 +173,29 @@ a {
 
 .right-bound {
   text-align: right;
+}
+
+.waves {
+  position: relative;
+  width: 370px; 
+  height: 100%; 
+  background-color: white;
+  margin-top: 20px;
+  display: none;
+}
+
+.wave {
+  animation-name: example;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  mix-blend-mode: darken;
+  display: none;
+
 }
 
 @keyframes example {
