--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,11 +32,15 @@ h2 {
   font-weight: 600;
 }
 
+summary {
+  cursor: pointer;
+}
 
 .wrapper {
-  display: grid;
-  grid-template-rows: 1fr;
+  display: flex;
+  flex-direction: row;
   width: 100%;
+
 }
 
 .title {
@@ -81,7 +85,7 @@ a {
   display: grid;
   grid-auto-flow: column; /* Columns grow horizontally */
   grid-auto-columns: minmax(100px, 1fr); /* Flexible column widths */
-  height: 100vh; /* Adjust for header height */
+  height: 100%; /* Adjust for header height */
   background-color: white;
   gap: 0; /* No spacing between columns */
 }
@@ -125,6 +129,7 @@ a {
   animation-timing-function: linear;
   transform: scale(1.5, 1.0);
   transform-origin: center;
+  order: -1;
 
 
 }
@@ -141,21 +146,7 @@ a {
 .gradient:has(.btnControl:checked):hover {
 }
 
-.gradient1 {
-  background-image: linear-gradient(green, yellow, red, purple, blue, black);
-}
 
-.gradient2 {
-  background-image: linear-gradient(green, yellow, white);
-}
-
-.gradient3 {
-  background-image: linear-gradient(indigo, red, white);
-}
-
-.image {
-  width: 100%;
-}
 
 .content {
   padding-bottom: 20px;
@@ -202,6 +193,72 @@ a {
   from {  background-position: 0px 0px;}
   to {  background-position: 0px 200vh;}
 }
+
+/*@media screen and (max-width: 980px) {
+  body {
+    flex-direction: column;
+  }
+
+  svg {
+    height: 100%;
+  }
+
+  .grid-container {
+    grid-auto-flow: row;
+    grid-auto-rows: minmax(100px, 1fr);
+
+  }
+
+  .content {
+    padding-right: 20px;
+    padding-bottom: 0px;
+  }
+
+  .header {
+    width: 100%;
+    height: 300px;
+
+
+    overflow-x: auto;
+    flex-direction: row;
+  }
+
+  .blocker {
+      padding-left: 0px;
+      padding-top: 400px;
+      display: none;
+  }
+
+  .gradient {
+  }
+
+  .footer {
+    display: none;
+  }
+
+.wrapper {
+  display: grid;
+  grid-template-rows: 1fr;
+  width: 100%;
+}
+
+  .gradient:has(.btnControl:checked) {
+    transform: scale(1.0, 1.0);
+  }
+
+  .title {
+    padding-top: 5px;
+  }
+
+  .text {
+    display: none;
+  }
+
+
+  }
+
+}
+
 
 
 
