--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,13 +194,19 @@ a {
   to {  background-position: 0px 200vh;}
 }
 
-/*@media screen and (max-width: 980px) {
+@media screen and (max-width: 980px) {
   body {
     flex-direction: column;
+    font-size: 6vw;
   }
 
   svg {
     height: 100%;
+  }
+
+  h1{
+    font-size: 16vw;
+    line-height: 15vw;
   }
 
   .grid-container {
@@ -216,7 +222,7 @@ a {
 
   .header {
     width: 100%;
-    height: 300px;
+    height: 50%;
 
 
     overflow-x: auto;
